Halls display fixes: 1) shuffle displayed halls, 2) fixed <a> overflow in caracteristics table

--- a/web/scss/layout/_global.scss
+++ b/web/scss/layout/_global.scss
@@ -74,3 +74,7 @@ main {
 .bg-left {
   background-position: left !important;
 }
+
+.word-break-all {
+  word-break: break-all;
+}
